<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PieFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/pie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shepherds_pie"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/pie_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pie_title"
            android:layout_marginTop="10dp"
            android:text="@string/recipe_shepherds_pie"
            android:textSize="25dp" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/back"
            android:textSize="25dp"
            android:backgroundTint="@color/header_bg"
            android:textColor="@color/black"/>
    </RelativeLayout>

</FrameLayout>