<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/header_bg"
            android:text="@string/all"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/breakfast_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/header_bg"
                android:text="@string/breakfast"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/lunch_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/header_bg"
                android:text="@string/lunch"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/dinner_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/header_bg"
                android:text="@string/dinner"
                android:textColor="@color/black" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/recipes_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/quark_pancakes_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:backgroundTint="@color/header_bg"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quark_pancakes"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ramen_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:backgroundTint="@color/header_bg"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ramen"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/shepherds_pie_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:backgroundTint="@color/header_bg"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shepherds_pie"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="10dp"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>